@@ -3,6 +3,7 @@
 	* gtkhtml.c (client_notify_widget): spell check or clear spell
 	checking errors on live_spell_check flag change
 	(command): added scroll-bod, scroll-eod commands
+	(command): allow copy in non editing mode and bind it to C-c
 
 2002-08-27  Larry Ewing  <lewing@ximian.com>
 
